--- a/BasesDeDatos_Proyecto1/BasesDeDatos_Proyecto1.csproj
+++ b/BasesDeDatos_Proyecto1/BasesDeDatos_Proyecto1.csproj
@@ -59,6 +59,7 @@
     <Compile Include="MasterBD.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Restriccion.cs" />
     <Compile Include="Tabla.cs" />
     <Compile Include="TypeSystem.cs" />
     <EmbeddedResource Include="Form1.resx">
