--- a/BasesDeDatos_Proyecto1/BasesDeDatos_Proyecto1.csproj
+++ b/BasesDeDatos_Proyecto1/BasesDeDatos_Proyecto1.csproj
@@ -57,6 +57,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="MasterBD.cs" />
+    <Compile Include="MasterTabla.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Restriccion.cs" />
