--- a/BasesDeDatos_Proyecto1/packages.config
+++ b/BasesDeDatos_Proyecto1/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="Antlr4" version="4.3.0" targetFramework="net45" />
   <package id="Antlr4.Runtime" version="4.3.0" targetFramework="net45" />
+  <package id="Castle.Core" version="3.3.3" targetFramework="net45" />
+  <package id="SimpleMsgPack" version="1.0.0.0" targetFramework="net45" />
 </packages>
