--- a/BasesDeDatos_Proyecto1/BasesDeDatos_Proyecto1.csproj
+++ b/BasesDeDatos_Proyecto1/BasesDeDatos_Proyecto1.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="BaseDatos.cs" />
     <Compile Include="ErrorListener.cs" />
+    <Compile Include="FilaTabla.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
